--- a/src/main/CustomerSupport/CustomerSupport.fxml
+++ b/src/main/CustomerSupport/CustomerSupport.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -15,14 +16,9 @@
    <children>
       <BorderPane layoutX="10.0" layoutY="10.0" prefHeight="800.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <Pane prefHeight="101.0" prefWidth="960.0" styleClass="topBar" BorderPane.alignment="CENTER">
+            <Pane prefHeight="108.0" prefWidth="960.0" styleClass="topBar" BorderPane.alignment="CENTER">
                <children>
-                  <ImageView fitHeight="113.0" fitWidth="101.0" layoutX="24.0" layoutY="3.0" onMouseClicked="#onCloseWindowsButtonPressed" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Res/Images/escape_hatch.png" />
-                     </image>
-                  </ImageView>
-                  <Button layoutX="973.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#onCloseWindowsButtonPressed" prefHeight="60.0" prefWidth="200.0" text="Kundservice &amp; Hjälp" textFill="WHITE" wrapText="true">
+                  <Button layoutX="977.0" layoutY="11.0" mnemonicParsing="false" onMouseClicked="#onCloseWindowsButtonPressed" prefHeight="60.0" prefWidth="200.0" text="Kundservice &amp; Hjälp" textFill="WHITE" wrapText="true">
                      <graphic>
                         <ImageView fitHeight="65.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -38,6 +34,11 @@
                         <String fx:value="topBar" />
                      </styleClass>
                   </Button>
+                  <ImageView fx:id="escapeHatchImage" fitHeight="98.0" fitWidth="105.0" layoutX="54.0" layoutY="2.0" onMouseClicked="#onHomeButtonPressed" onMouseEntered="#onEscapeHatchEnter" onMouseExited="#onEscapeHatchExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand" x="26.0">
+                     <image>
+                        <Image url="@../Res/Images/escape_hatch.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
          </top>
@@ -50,7 +51,7 @@
                            <children>
                               <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
                                  <children>
-                                    <Pane layoutX="86.0" layoutY="123.0" prefHeight="443.0" prefWidth="642.0" style="-fx-background-color: white;">
+                                    <Pane layoutX="86.0" layoutY="99.0" prefHeight="467.0" prefWidth="642.0" style="-fx-background-color: white;">
                                        <children>
                                           <Label layoutX="64.0" layoutY="75.0" text="0765633221">
                                              <font>
@@ -100,6 +101,19 @@
                                                 <Image url="@../Res/Images/contact.png" />
                                              </image>
                                           </ImageView>
+                                          <Button layoutX="156.0" layoutY="393.0" mnemonicParsing="false" onMouseClicked="#onHomeButtonPressed" prefHeight="60.0" prefWidth="300.0" stylesheets="@../Res/styles.css" text="Tillbaka till startsidan" textFill="WHITE">
+                                             <opaqueInsets>
+                                                <Insets />
+                                             </opaqueInsets>
+                                             <font>
+                                                <Font name="SansSerif Bold" size="22.0" />
+                                             </font>
+                                             <styleClass>
+                                                <String fx:value="cursor-hand" />
+                                                <String fx:value="dropShadow" />
+                                                <String fx:value="promDoneButton" />
+                                             </styleClass>
+                                          </Button>
                                        </children>
                                        <styleClass>
                                           <String fx:value="wizBar" />
