--- a/src/main/ListTitlePane/ListTitlePane.fxml
+++ b/src/main/ListTitlePane/ListTitlePane.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root animated="false" expanded="false" graphicTextGap="0.0" prefHeight="67.0" prefWidth="553.0" style="´: black;" stylesheets="@ListTitlePane.css" text=" " type="TitledPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root animated="false" expanded="false" graphicTextGap="0.0" onMouseClicked="#onMouseClicked" prefHeight="67.0" prefWidth="553.0" style="´: black;" stylesheets="@ListTitlePane.css" text=" " type="TitledPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <content>
       <AnchorPane fx:id="orderTitleAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="575.0" styleClass="titleFlowPane">
          <children>
