--- a/src/main/Product/Product.fxml
+++ b/src/main/Product/Product.fxml
@@ -27,7 +27,7 @@
                <children>
                   <ImageView fx:id="minusImage" fitHeight="30.0" fitWidth="30.0" layoutX="12.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true" />
                   <ImageView fx:id="plusImage" fitHeight="30.0" fitWidth="30.0" layoutX="130.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true" />
-                  <TextField fx:id="amountTextField" alignment="CENTER" editable="false" layoutX="45.0" layoutY="8.0" prefHeight="29.0" prefWidth="82.0">
+                  <TextField fx:id="amountTextField" alignment="CENTER" editable="false" layoutX="51.0" layoutY="8.0" prefHeight="39.0" prefWidth="70.0" style="-fx-font-size: 18px;">
                      <font>
                         <Font size="13.0" />
                      </font>
@@ -42,7 +42,7 @@
                         <Image url="@../Res/Images/minus.png" />
                      </image>
                   </ImageView>
-                  <Button fx:id="buyButton" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" layoutX="3.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#onBuyButtonPressed" prefHeight="43.0" prefWidth="167.0" text="Köp" textAlignment="CENTER">
+                  <Button fx:id="buyButton" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" layoutX="3.0" layoutY="3.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#onBuyButtonPressed" prefHeight="43.0" prefWidth="167.0" text="Köp" textAlignment="CENTER">
                      <font>
                         <Font name="SansSerif Regular" size="24.0" />
                      </font>
